<resources>
    <string name="app_name">traveler</string>

    <!--icon-->
    <string name="icon_list">列表</string>
    <string name="icon_eye">发现</string>
    <string name="icon_collect">收藏</string>
    <string name="icon_me">我的</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="forgetPassword">forget password></string>
    <!--icon-->
</resources>
